bugfix, add z-index for preloader

--- a/src/components/Preloader/style.module.scss
+++ b/src/components/Preloader/style.module.scss
@@ -4,6 +4,7 @@
     width: 80px;
     height: 80px;
     position: fixed;
+    z-index: 10;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
